fix css bugs on firefox

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -81,15 +81,26 @@ header {
   top: 0px;
   z-index: 999;
   font-weight: 900;
-  container-type: inline-size;
-  container-name: nav;
+  /*   container-type: inline-size;
+  container-name: nav; */
   display: flex;
-  width: 100%;
+
   padding: 0.5rem 2rem;
   align-items: center;
   justify-content: space-between;
   background-color: $primary-color;
+
   box-shadow: $cool-shadow;
+
+  input[type="checkbox"] {
+    display: none;
+  }
+
+  .hamburger-menu {
+    width: 3rem;
+    height: 3rem;
+    background-color: black;
+  }
   a {
     &:hover,
     &.active {
@@ -103,6 +114,7 @@ header {
   .container {
     display: flex;
     gap: 2rem;
+    align-items: center;
     #cart-button {
       position: relative;
       img {
@@ -129,16 +141,65 @@ header {
       }
     }
   }
+
+  aside {
+    position: absolute;
+    width: 10rem;
+    padding: 2rem;
+    bottom: -100vh;
+    bottom: -100dvh;
+    height: 100vh;
+    height: 100dvh;
+    right: -10rem;
+    transition: right 0.5s;
+
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+
+    background-color: $primary-color;
+  }
+
+  .overlay {
+    display: none;
+    position: absolute;
+    bottom: -100vh;
+    bottom: -100dvh;
+    box-shadow: $cool-shadow;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    height: 100dvh;
+    background-color: black;
+    // opacity: 0.8;
+    animation: obscure 0.5s forwards;
+    @keyframes obscure {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 0.8;
+      }
+    }
+  }
+  input:checked ~ aside {
+    right: 0px;
+  }
+
+  input:checked ~ .overlay {
+    display: block;
+  }
 }
 
 #gatsby-focus-wrapper {
-  container-type: inline-size;
-  container-name: root;
-
+  /*  container-type: inline-size;
+  container-name: root; */
+  overflow-x: clip;
   display: grid;
   min-height: 100vh;
   min-height: 100svh;
 
+  grid-template-columns: 100%;
   grid-template-rows: min-content min-content 1fr;
 }
 
@@ -418,8 +479,8 @@ header {
   }
 
   .container {
-    width: 100vw;
-    max-width: 700px;
+    max-width: 100%;
+    width: $universal-width;
     display: flex;
     gap: 2rem;
     justify-content: center;
@@ -427,7 +488,7 @@ header {
 
     .review {
       color: white;
-      width: 100vw;
+      width: 100%;
       max-width: 300px;
       box-shadow: $cool-shadow;
       border-radius: 0.2rem;
@@ -473,7 +534,7 @@ header {
     justify-content: center;
     margin: 0rem auto;
     gap: 2rem;
-    max-width: 100vw;
+    max-width: 100%;
     width: $universal-width;
 
     flex-wrap: wrap;
@@ -485,13 +546,12 @@ header {
 }
 
 #home {
-  width: 100%;
   display: flex;
   justify-content: center;
 
   .content {
-    width: 100vw;
-    max-width: $universal-width;
+    max-width: 100%;
+    width: $universal-width;
     position: relative;
     padding-bottom: 4rem;
   }
@@ -630,7 +690,8 @@ header {
 #we {
   padding: 2rem;
   justify-self: center;
-  max-width: $universal-width;
+  max-width: 100%;
+  width: $universal-width;
   h1 {
     margin-bottom: 2rem;
     text-align: center;
@@ -713,7 +774,6 @@ header {
 }
 
 #footer {
-  width: 100%;
   background-color: $primary-color;
   padding: 3rem 1rem;
   text-align: center;
@@ -754,13 +814,13 @@ header {
   }
 }
 
-@container root   (max-width:700px) {
+@media (max-width: 700px) {
   .cards-container {
     width: 320px !important;
   }
 }
 
-@container root   (max-width:800px) {
+@media (max-width: 800px) {
   #footer {
     .container {
       grid-template-columns: 1fr 1fr !important;
@@ -772,7 +832,7 @@ header {
   }
 }
 
-@container root   (max-width:540px) {
+@media (max-width: 650px) {
   #footer {
     .container {
       grid-template-columns: 1fr !important;
@@ -783,7 +843,7 @@ header {
   }
 }
 
-@container nav    (max-width:600px) {
+@media (max-width: 700px) {
   header {
     & > .container > nav {
       display: none !important;
@@ -791,7 +851,7 @@ header {
   }
 }
 
-@container nav    (min-width:601px) {
+@media (min-width: 701px) {
   .hamburger-menu {
     display: none !important;
   }
